--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,14 +28,13 @@ $navbar-default-bg: black;
   background-image: asset-url('cat-image.jpg');
   background-size: cover;
   height: 550px;
-}
-
-.jumbotron h1 {
-  color: #fff;
-  text-align: center;
-  margin-bottom: 200px;
-  letter-spacing: -1px;
-  font-weight: bold;
+  h1 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 200px;
+    letter-spacing: -1px;
+    font-weight: bold;
+  }
 }
 
 .btn-xlarge {
@@ -50,6 +49,15 @@ $navbar-default-bg: black;
 
 .description {
   margin-top: 0;
+}
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body {
+  border-top: 1px solid #eaeaea;
 }
 
 footer {
