--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,6 +9,13 @@
           </div>
           <div class="article-body">
             <%= truncate(article.description, length: 80) %>
+            <div class="article-meta-info">
+              <small>
+                Created by: <%= article.user.username if article.user %>,
+                <%= time_ago_in_words(article.created_at) %> ago,
+                last edited: <%= time_ago_in_words(article.updated_at) %> ago
+              </small>
+            </div>
           </div>
           <div class="article-actions">
             <%= link_to 'Edit this article', edit_article_path(article), class: 'btn btn-xs btn-primary' %>
