--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <div align="center">
+  <%= will_paginate %>
   <h1>All Alpha Bloggers</h1>
   <% @users.each do |user| %>
       <ul class="listing">
@@ -11,4 +12,5 @@
         </div>
       </ul>
   <% end %>
+  <%= will_paginate %>
 </div>
