--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,11 @@
             <li><%= link_to gravatar_for(user), user_path(user) %></li>
             <li class="article-title"><%= link_to user.username, user_path(user) %></li>
             <li><small><%= pluralize(user.articles.count, 'article') if user.articles %></small></li>
+            <% if logged_in? and current_user.admin? %>
+            <li><%= link_to 'Delete this user', user, method: :delete,
+                            data: { confirm: "Are you sure you want to delete #{user.username} with all his/her articles?" },
+                            class: 'btn btn-xs btn-danger' %></li>
+            <% end %>
           </div>
         </div>
       </ul>
