Update all views with categories.

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,6 +8,9 @@
           </div>
           <div class="article-body">
             <%= truncate(article.description, length: 80) %>
+            <% if article.categories.any? %>
+              <p>Categories: <%= render article.categories %></p>
+            <% end %>
             <div class="article-meta-info">
               <small>
                 Created by: <%= article.user.username if article.user %>,
