--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,3 +94,16 @@ footer {
     }
   }
 }
+
+#association-form {
+  margin-left: 200px;
+  margin-bottom: 20px;
+}
+
+.badge {
+  background-color: #CEF6F5;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bolder;
+
+}
